[project]
name = "aa-tools"
version = "0.1.0"
description = "aa_tools - a friendly, Pyodide-ready toolbox of cool functions for kid-built agents (web search, fetch pages, email, AI, weather, and tons of fun stuff)."
readme = "README.md"
authors = [
    { name = "obaodelana", email = "obaloluwa.dev@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/obaodelana/aa_tools"
Documentation = "https://github.com/obaodelana/aa_tools"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that make real network calls (run with --live)",
]
